--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/Kavithasivakumarramani/checkoutservice.git'// Replace with your repository URL
+                git branch: 'master', url: 'https://github.com/Kavithasivakumarramani/checkoutservice.git'// Replace with your repository URL
             }
         }
         stage('Build Docker Image') {
